<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ClassicMix</string>
    <string name="action_play">Play</string>
    <string name="action_highscore">Highscore</string>
    <string name="action_settings">Settings</string>
    <string name="settings_background_animations_summary">Enable background animations during gameplay.</string>
    <string name="settings_background_animations_title">Enable animations</string>
    <string name="settings_background_opacity_message">Select the background image opacity level</string>
    <string name="settings_background_opacity_title">Background image opacity</string>
    <string name="settings_category_background">Background</string>
    <string name="settings_category_background_summary">Background image preferences</string>
    <string name="settings_category_gameplay">Gameplay</string>
    <string name="settings_category_gameplay_summary">Gameplay configurations</string>
    <string name="settings_gameplay_difficulty_title">Difficulty</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_highscore">Highscore</string>
    <string name="settings_sound_music_volume_title">Music Volume</string>
    <string name="settings_sound_music_volume_message">Adjust the music volume.</string>
    <string name="settings_sound_effects_volume_title">Effects Volume</string>
    <string name="settings_sound_effects_volume_message">Adjust the effects volume.</string>
    <string name="settings_category_sound">Sound</string>
    <string name="settings_category_sound_summary">Sound settings</string>
    <string name="settings_category_graphics">Graphics</string>
    <string name="settings_category_graphics_summary">Display settings</string>
    <string name="settings_category_performance">Performance</string>
    <string name="settings_category_performance_summary">Performance settings</string>
    <string name="settings_performance_threaded_framebuffer_title">Threaded Frame Buffer</string>
    <string name="settings_performance_threaded_framebuffer_summary">Use an exclusive thread to process game view.</string>
    <string name="settings_display_fps_title">Display FPS</string>
    <string name="settings_display_fps_summary">Display a FPS counter.</string>
    <string name="background_disabled">No background</string>
    <string name="sound_disabled">No sound</string>
    <string name="difficulty_easy">Easy</string>
    <string name="difficulty_normal">Normal</string>
    <string name="difficulty_hard">Hard</string>
    <string name="settings_performance_use_shadows_title">Use Shadows</string>
    <string name="settings_performance_use_shadows_summary">Display shadow beneath game elements.</string>

    <string-array name="settings_gameplay_difficulty_values">
        <item>0</item>
        <item>1</item>
        <item>2</item>
    </string-array>
    <string-array name="settings_gameplay_difficulty_entries">
        <item>@string/difficulty_easy</item>
        <item>@string/difficulty_normal</item>
        <item>@string/difficulty_hard</item>
    </string-array>
    <string-array name="settings_background_opacity_summaries">
        <item>Transparent</item>
        <item>Translucent</item>
        <item>Opaque</item>
    </string-array>
    <string-array name="settings_sound_volume_entries">
        <item>Low</item>
        <item>Medium</item>
        <item>Loud</item>
    </string-array>
</resources>
