<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="br.pucpr.jvlppm.classicmix.activities.HighscoreActivity">

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center_vertical">

        <TextView
            style="@style/highscore_difficulty_header"
            android:text="@string/difficulty_easy" />

        <TextView
            android:id="@+id/highscore_easy_value"
            style="@style/highscore_difficulty_value" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center_vertical">

        <TextView
            style="@style/highscore_difficulty_header"
            android:text="@string/difficulty_normal" />

        <TextView
            android:id="@+id/highscore_medium_value"
            style="@style/highscore_difficulty_value" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center_vertical">

        <TextView
            style="@style/highscore_difficulty_header"
            android:text="@string/difficulty_hard" />

        <TextView
            android:id="@+id/highscore_hard_value"
            style="@style/highscore_difficulty_value" />
    </TableRow>
</TableLayout>